<resources>
    <string name="app_name">ProjectGroupMakerBinar</string>
    <string name="title_about">About</string>
    <string name="title_group">Group Maker</string>
    <string name="desc_group">Create a groups automatically</string>
    <string name="text_body">Group Maker is a generator that creates random teams or groups. Through this application can help you to divide the list of names into a team or group. By entering a list of names into the team generator, the team generator will randomize the names you entered earlier. You can also set the number of groups or the number of people in a group that you want to create to produce a randomly evenly distributed group within a group</string>
    <string name="text_profile_uki">I\'m a fullstack developer from Tulungagung, East Java. Graduate from Gunadarma University in 2015, working at pharmaceutical company private companies since 7 years ago</string>
    <string name="text_profile_lukas">Since childhood, I always wondering everything about technology like phone apps, games, television or anything tech-related. I always want to find out how those things work.  Today, not much has changed. I\'m still wondering about technology. The difference is now I also develop mobile apps and websites to helping people and company through online interactions. My recent website project is developing website for UMKM to selling their products. Also, my recent android developing project is creating group maker apps. Currently, I’m trying to build my skills and experience with Android developing in my spare time.</string>
    <string name="text_profile_rodan">Hi i\'m Muhammad Rodan Duamar and currently 19 years old. I\'m graduated from SMA Negeri 4 Yogyakarta, who has an interest in programming especially in the development of Android-based mobile applications.</string>
    <string name="text_profile_habio">Hi i\'m Habio Fatwa Sidiq, currently 31 years old and next year 32 years. At this time I\'m learning android programming</string>
    <string name="text_profile_adhi">Hi i\'m Adhi Setyo Nugoroho graduate from University of Atma Jaya Yogyakarta in 2020, working at contact center / customer service at Bukalapak since 2021.I\'m currently studying about android programming in my spare time</string>
    <string name="text_profile_eri">I\'m Eri Samsudin, currently i learning android programming at Binar Academy. In this chapter, i have project with my group to make a application about Group Maker</string>
    <string name="txt_name_adhi">Adhi \nSetyo Nugroho</string>
    <string name="txt_job_adhi">Scrum</string>
    <string name="txt_name_eri">Eri \nSamsudin</string>
    <string name="txt_job_eri">Developer</string>
    <string name="txt_name_habio">Habio \nFatwa Sidiq</string>
    <string name="txt_job_habio">Developer</string>
    <string name="txt_name_lukas">Lukas \nAgus Budi Prasetya</string>
    <string name="txt_job_lukas">Design</string>
    <string name="txt_name_rodan">Muhammad Rodan Duamar</string>
    <string name="txt_job_rodan">Developer</string>
    <string name="txt_name_uki">Uki \nPrastowo</string>
    <string name="txt_job_uki">Leader</string>
    <string name="txt_name_job_uki">Uki Prastowo \nLeader</string>
    <string name="txt_name_job_lukas">Lukas Agus \nBudi Prasetya \nDesign</string>
    <string name="txt_name_job_adhi">Adhi Setyo Nugroho\nScrum</string>
    <string name="txt_name_job_rodan">Muhammad\nRodan Duamar \nDeveloper</string>
    <string name="txt_name_job_habio">Habio Fatwa Sidiq \nDeveloper</string>
    <string name="txt_name_job_eri">Eri Samsudin \nDeveloper</string>
    <string name="title_sub_about">App</string>
    <string name="title_about2">Group Maker</string>
    <string name="title_about3">Simply and Fast</string>
    <string name="title_sub_about2">Get To Know About Us</string>
    <string name="title_menu1">About</string>
    <string name="title_desc_menu1">Description about \nour project</string>
    <string name="title_menu2">Our Team</string>
    <string name="title_desc_menu2">Information about \nour team</string>
    <string name="text_group_splash">Group</string>
    <string name="text_maker_splash">Maker</string>
    <string name="text_previous">Previous</string>
    <string name="text_next">Next</string>
    <string name="text_back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tour_de_java">Tour de Java</string>
    <string name="october_27_2022">October 27, 2022</string>
    <string name="text_delete_1">You’re about to delete this history</string>
    <string name="text_desc_del">All your data grouping in this history will be permanently removed and you won’t be able to see them again.</string>
    <string name="easy_to_use">Easy \nTo Use</string>
    <string name="fast_best_solution"><![CDATA[Fast & \nBest Solution]]></string>
    <string name="text_desc_lp1">Membuat grup menjadi lebih mudah \nhanya dari ponsel Anda.</string>
    <string name="text_desc_lp2">Sebagai sebuah solusi yang cepat dan tepat. Anda juga \nbisa memberikan nama grup.</string>
    <string name="text_delete">Delete</string>
    <string name="text_view_detail">View Detail</string>
    <string name="text_history">History \nGroup</string>
    <string name="text_group">Group</string>
    <string name="text_maker">Maker</string>
    <string name="text_active_list_members">Active List members</string>
    <string name="text_tournament_member">Tournament Member</string>
    <string name="text_two_members">Two Members</string>
    <string name="text_group_generator">Group Generator</string>
    <string name="text_members_management">Members Management</string>
    <string name="text_member">Member</string>
    <string name="text_about">About</string>
    <string name="text_group_result">Group Result</string>
    <string name="text_random_group">Random Group</string>
    <string name="text_menu">Home</string>
    <string name="text_add_list">Add List</string>
    <string name="text_group_name">Group Name</string>
    <string name="text_notes">Notes (e.g. This is Football group)</string>
    <string name="text_add">Add</string>
    <string name="text_not_blank">Field can not be blank</string>
    <string name="text_add_member">Add Member</string>
    <string name="text_delete_group">Delete Group</string>
    <string name="text_list">List</string>
    <string name="text_lorem">Lorem ipsum dolor sit amet sed do eiusmod.</string>
    <string name="text_no_dialog">No</string>
    <string name="text_yes_dialog">Yes</string>
    <string name="text_delete_dialog">Delete</string>
    <string name="text_empty_notes">You don\'t have any member</string>
    <string name="current_preset">Group Name:</string>
    <string name="current_preset2">Current Preset:</string>
    <string name="player_list"><u>List of Players</u></string>
    <string name="total_players">Total Players:</string>
    <string name="none">None</string>
    <string name="empty">Empty</string>
</resources>