<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileEriActivity"
    android:background="@color/blue_1"
    android:alpha="0.5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name_eri"
            android:textColor="@color/white"
            style="@style/TextTitle.Bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_job_eri"
            android:textColor="@color/white"
            style="@style/TextTitle.Light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            style="@style/TextDesc.Light"
            android:text="@string/text_profile_eri"/>

    </LinearLayout>
    >

</androidx.constraintlayout.widget.ConstraintLayout>