<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.home.HomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_group"
        style="@style/TextTitleHome.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_group"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_maker"
        style="@style/TextTitleHome.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_maker"
        app:layout_constraintStart_toStartOf="@id/tv_group"
        app:layout_constraintTop_toBottomOf="@id/tv_group" />

    <TextView
        style="@style/TextList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_active_list_members"
        app:drawableStartCompat="@drawable/ic_check_home"
        app:layout_constraintStart_toStartOf="@id/tv_maker"
        app:layout_constraintTop_toBottomOf="@id/tv_maker" />

    <TextView
        style="@style/TextList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/text_tournament_member"
        app:drawableStartCompat="@drawable/ic_check_home"
        app:layout_constraintStart_toStartOf="@id/tv_maker"
        app:layout_constraintTop_toBottomOf="@id/tv_maker" />

    <TextView
        style="@style/TextList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/text_two_members"
        app:drawableStartCompat="@drawable/ic_check_home"
        app:layout_constraintStart_toStartOf="@id/tv_maker"
        app:layout_constraintTop_toBottomOf="@id/tv_maker" />

    <TextView
        style="@style/TextList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:text="@string/text_group_generator"
        app:drawableStartCompat="@drawable/ic_check_home"
        app:layout_constraintStart_toStartOf="@id/tv_maker"
        app:layout_constraintTop_toBottomOf="@id/tv_maker" />

    <TextView
        style="@style/TextList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/text_members_management"
        app:drawableStartCompat="@drawable/ic_check_home"
        app:layout_constraintStart_toStartOf="@id/tv_maker"
        app:layout_constraintTop_toBottomOf="@id/tv_maker" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_white_space"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:background="@drawable/background_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cl_white_space">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_member"
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/blue"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="25dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_group_home" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/text_random_group"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_history"
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/blue"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="25dp"
                            android:src="@drawable/ic_history_home" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/text_history"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_about"
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/blue"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="25dp"
                            android:src="@drawable/ic_about_home" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/text_about"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:src="@drawable/ic_home_team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>